--- a/src/components/HelloWorld/index.scss
+++ b/src/components/HelloWorld/index.scss
@@ -1,6 +1,8 @@
-@import "./variables";
+@import './variables';
 
 .hello {
+  background-color: $hello-bg-color;
+
   h3 {
     margin: 40px 0 0;
   }
@@ -16,6 +18,6 @@
   }
 
   a {
-    color: $link-color;
+    color: $green;
   }
 }
